...
                                Icons.Rounded.Menu
                            },
                        contentDescription =
                            if (isExpanded) {
                                "Tutup menu"
                            } else {
                                "Buka menu"
                            },
                        tint = MaterialTheme.colorScheme.onPrimary,
                        modifier = Modifier.size(20.dp),
                    )
                }
            }
...
